[gd_scene load_steps=2 format=3 uid="uid://cxpoleufy2xiv"]

[ext_resource type="Script" path="res://scripts/UI/Main/Multiplayer/waiting.gd" id="1_of2ws"]

[node name="Waiting" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_of2ws")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -35.0
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayerList" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
size_flags_stretch_ratio = 5.0

[node name="Actions" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Start" type="Button" parent="VBoxContainer/Actions"]
layout_mode = 2
size_flags_vertical = 8
text = "Connection en cours..."

[node name="Back" type="Button" parent="VBoxContainer/Actions"]
layout_mode = 2
size_flags_vertical = 8
text = "Retour"

[node name="Spectator" type="CheckButton" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -15.5
offset_bottom = 15.5
grow_horizontal = 0
grow_vertical = 2
text = "ÃŠtre spectateur : "

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -25.0
offset_right = 96.0
offset_bottom = 25.0
grow_vertical = 2

[node name="Code" type="Label" parent="VBoxContainer2"]
layout_mode = 2
text = "Code : unset"

[node name="IP" type="Label" parent="VBoxContainer2"]
layout_mode = 2

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="VBoxContainer/Actions/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Actions/Back" to="." method="_on_back_pressed"]
[connection signal="toggled" from="Spectator" to="." method="_on_spectator_toggled"]
